--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.7.2",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-pdf": "^8.0.2",
     "react-router-dom": "^6.23.1",
     "react-transition-group": "^4.4.5"
   },
