--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.15.19",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.6",
+    "@react-three/rapier": "^1.4.0",
     "@types/three": "^0.164.1",
     "axios": "^1.7.2",
     "emailjs-com": "^3.2.0",
