--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.19",
-    "@react-three/drei": "^9.106.0",
+    "@react-spring/web": "^9.7.5",
+    "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.16.6",
     "@react-three/rapier": "^1.4.0",
     "@tanstack/react-query": "^5.66.0",
@@ -33,11 +34,12 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-pdf": "^9.0.0",
     "react-router-dom": "^6.23.1",
-    "react-spring": "^9.7.3",
+    "react-spring": "^9.7.5",
     "react-transition-group": "^4.4.5",
     "react-use-measure": "^2.1.1",
     "three": "^0.164.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.13.0",
